force-app/main/default/objects/Session__c/Session__c.object-meta.xml
<CustomObject>
    <description>This object is for doctor session. This object will save record of Azurite start date and end date.</description>
    <label>Surgery Session</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surgery Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>