force-app/main/default/objects/Session__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Surgery Sessions</relationshipLabel>
    <relationshipName>Surgery_Sessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>