force-app/main/default/objects/Session__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Date on which Azurite session is end.</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>