force-app/main/default/objects/Session__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surgery Sessions</relationshipLabel>
    <relationshipName>Surgery_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>