force-app/main/default/objects/Session__c/fields/Medical_Balance__c.field-meta.xml
<CustomField>
    <fullName>Medical_Balance__c</fullName>
    <label>Medical Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>