force-app/main/default/objects/Session__c/fields/Medical_Report__c.field-meta.xml
<CustomField>
    <fullName>Medical_Report__c</fullName>
    <label>Medical Report</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>