force-app/main/default/objects/Session__c/fields/Num_Itineraries__c.field-meta.xml
<CustomField>
    <fullName>Num_Itineraries__c</fullName>
    <formula>Booking__r.Num_Itineraries__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num Itineraries</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>