force-app/main/default/objects/Session__c/fields/Procedures__c.field-meta.xml
<CustomField>
    <fullName>Procedures__c</fullName>
    <label>Procedures</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>