force-app/main/default/objects/Session__c/fields/Session_days__c.field-meta.xml
<CustomField>
    <fullName>Session_days__c</fullName>
    <formula>End_Date__c -  Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>