force-app/main/default/objects/Session__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Date on which azurite session is start.</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>