force-app/main/default/objects/Session__c/fields/Taxi_Booking__c.field-meta.xml
<CustomField>
    <fullName>Taxi_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taxi Booking</label>
    <referenceTo>Taxi_Booking__c</referenceTo>
    <relationshipLabel>Surgery Sessions</relationshipLabel>
    <relationshipName>Surgery_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>