force-app/main/default/objects/Session__c/listViews/All_with_details.listView-meta.xml
<ListView>
    <fullName>All_with_details</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Num_Itineraries__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All with details</label>
</ListView>